Progress duzy, a nawet bardzo duzy, created endpoints as a get and post and connected with firestore database, increase security level